syntax = "proto3";

option go_package = "github.com/ukama/ukama/systems/common/pb/gen/events";

package ukama.events.v1;

import "validator.proto";

message EventOrgCreate {
   string id = 1 [(validator.field) = {uuid_ver: 4}];
   string name = 2 [(validator.field) = {string_not_empty: true}]; // there is extra vlidation on repository level
   string owner = 3 [(validator.field) = {uuid_ver: 4, string_not_empty: true}];
}

message EventOrgRegisterUser {
    string OrgId = 1 [(validator.field) = {uuid_ver: 4}];
    string OrgName = 2 [(validator.field) = {string_not_empty: true}];
    string UserId = 3 [(validator.field) = {uuid_ver: 4}]; 
}
