/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * Copyright (c) 2023-present, Ukama Inc.
 */

 syntax = "proto3";

 option go_package = "github.com/ukama/ukama/systems/common/pb/gen/events";
 
 package ukama.events.v1;

 enum RoleType {
    TYPE_INVALID = 0;
    TYPE_OWNER = 1;
    TYPE_ADMIN = 2;
    TYPE_VENDOR = 3;
    TYPE_USER = 4;
}